--- a/discord_bot/Dockerfile
+++ b/discord_bot/Dockerfile
@@ -6,6 +6,6 @@ COPY requirements.txt requirements.txt
 
 RUN pip install -r requirements.txt --no-cache-dir
 
-COPY . .
+COPY /src .
 
 CMD ["python", "main.py"]
