--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 DISCORD_TOKEN=your_discord_bot_token
 MAX_UPLOAD_SIZE_MEGABYTES=128
 WEB_INTERFACE_URL=http://localhost:5000
+MINIO_ACCESS_KEY=minio
+MINIO_SECRET_KEY=minio123
 
 MINIO_ROOT_USER=root
 MINIO_ROOT_PASSWORD=rootroot
