--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     build: discord_bot
     ports:
       - "5000:5000"
+    init: true
     environment:
       - DISCORD_TOKEN=${DISCORD_TOKEN}
       - MAX_UPLOAD_SIZE_MEGABYTES=${MAX_UPLOAD_SIZE_MEGABYTES}
