Working file upload, message improvements

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 DISCORD_TOKEN=your_discord_bot_token
 MAX_UPLOAD_SIZE_MEGABYTES=128
 WEB_INTERFACE_URL=http://localhost:5000
+OBJECT_STORAGE_URL=http://localhost:9000
 MINIO_ACCESS_KEY=minio
 MINIO_SECRET_KEY=minio123
 
