--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 DISCORD_TOKEN=your_discord_bot_token
+# Web interface maximum file upload size. Set to -1 for unlimited.
 MAX_UPLOAD_SIZE_MEGABYTES=128
 WEB_INTERFACE_URL=http://localhost:5000
 OBJECT_STORAGE_URL=http://localhost:9000
