--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 DISCORD_TOKEN=your_discord_bot_token
 # Web interface maximum file upload size. Set to -1 for unlimited.
 MAX_UPLOAD_SIZE_MEGABYTES=128
-WEB_INTERFACE_URL=http://localhost:5000
-OBJECT_STORAGE_URL=http://localhost:9000
+WEB_INTERFACE_URL=https://localhost/web
+OBJECT_STORAGE_URL=https://localhost/storage
+OBJECT_STORAGE_CONSOLE_URL=https://localhost/storage-console
 MINIO_ACCESS_KEY=minio
 MINIO_SECRET_KEY=minio123
 
