Option for disabling anonymous uploads

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 DISCORD_TOKEN=your_discord_bot_token
 # Web interface maximum file upload size. Set to -1 for unlimited.
 MAX_UPLOAD_SIZE_MEGABYTES=128
+# Allow anonymous uploads - the user isn't shared in the embed and the file doesn't have a user id in the metadata.
+# Allowed values: true, false
+ALLOW_ANONYMOUS_UPLOADS=true
 WEB_INTERFACE_URL=https://localhost/web
 OBJECT_STORAGE_URL=https://localhost/storage
 OBJECT_STORAGE_CONSOLE_URL=https://localhost/storage-console
