--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     environment:
       - DISCORD_TOKEN=${DISCORD_TOKEN}
       - MAX_UPLOAD_SIZE_MEGABYTES=${MAX_UPLOAD_SIZE_MEGABYTES}
+      - ALLOW_ANONYMOUS_UPLOADS=${ALLOW_ANONYMOUS_UPLOADS}
       - WEB_INTERFACE_URL=${WEB_INTERFACE_URL}
       - OBJECT_STORAGE_URL=${OBJECT_STORAGE_URL}
       - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
