--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,14 @@ DISCORD_TOKEN=your_discord_bot_token
 MAX_UPLOAD_SIZE_MEGABYTES=128
 # Allow anonymous uploads - the user isn't shared in the embed and the file doesn't have a user id in the metadata.
 # Allowed values: true, false
+# Default: true
 ALLOW_ANONYMOUS_UPLOADS=true
+# Allow permanent tokens - allows to upload multiple files without using the same token - no need to generate a new token for each file.
+# !WARNING!: This can be a security risk if the token is shared - file uploads will be associated with the user who has the token.
+# Upload requests are stored in memory - when the server is restarted, the permanent tokens are lost.
+# Allowed values: true, false
+# Default: false
+ALLOW_PERMANENT_TOKENS=false
 WEB_INTERFACE_URL=https://localhost/web
 OBJECT_STORAGE_URL=https://localhost/storage
 OBJECT_STORAGE_CONSOLE_URL=https://localhost/storage-console
