--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - DISCORD_TOKEN=${DISCORD_TOKEN}
       - MAX_UPLOAD_SIZE_MEGABYTES=${MAX_UPLOAD_SIZE_MEGABYTES}
       - ALLOW_ANONYMOUS_UPLOADS=${ALLOW_ANONYMOUS_UPLOADS}
+      - ALLOW_PERMANENT_TOKENS=${ALLOW_PERMANENT_TOKENS}
       - WEB_INTERFACE_URL=${WEB_INTERFACE_URL}
       - OBJECT_STORAGE_URL=${OBJECT_STORAGE_URL}
       - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
