Minor UI improvements & changes

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ ALLOW_ANONYMOUS_UPLOADS=true
 # Allowed values: true, false
 # Default: false
 ALLOW_PERMANENT_TOKENS=false
+GATEWAY_URL=https://localhost
 WEB_INTERFACE_URL=https://localhost/web
 OBJECT_STORAGE_URL=https://localhost/storage
 OBJECT_STORAGE_CONSOLE_URL=https://localhost/storage-console
