--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     init: true
     environment:
       - DISCORD_TOKEN=${DISCORD_TOKEN}
+      - GATEWAY_URL=${GATEWAY_URL}
       - MAX_UPLOAD_SIZE_MEGABYTES=${MAX_UPLOAD_SIZE_MEGABYTES}
       - ALLOW_ANONYMOUS_UPLOADS=${ALLOW_ANONYMOUS_UPLOADS}
       - ALLOW_PERMANENT_TOKENS=${ALLOW_PERMANENT_TOKENS}
