Changes for future - channel types

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ MINIO_SECRET_KEY=minio123
 
 MINIO_ROOT_USER=root
 MINIO_ROOT_PASSWORD=rootroot
+
+VERSION=0.0.1 # Currently not used to differenciate between versions
