--- a/gateway/Caddyfile
+++ b/gateway/Caddyfile
@@ -15,7 +15,7 @@ localhost {
         reverse_proxy http://object-storage:9000
 
         header {
-            # Dissalow javascript execution for hosted files
+            # Dissalow javascript execution for hosted files - could be a security risk
             Content-Security-Policy "default-src 'self'; script-src 'none'; object-src 'none'; frame-ancestors 'none';"
             X-Content-Type-Options "nosniff"
             X-Frame-Options "DENY"
